@@ -693,6 +693,23 @@ main(int argc, char **argv)
          printf("%s %s\n", banner, banner2);
          exit(0);
       }
+      /* print information and exit if dvips finds options --help or --version */
+      if (strlen(argv[1]) == 6 && strcmp(argv[1], "--help") == 0) {
+         help (0);
+         exit (0);
+      }
+      if (strlen (argv[1]) == 9 && strcmp(argv[1], "--version") == 0) {
+         puts (BANNER);
+         puts (kpathsea_version_string);
+         puts ("Copyright 2022 Radical Eye Software.\n\
+There is NO warranty.  You may redistribute this software\n\
+under the terms of the GNU General Public License\n\
+and the Dvips copyright.\n\
+For more information about these matters, see the files\n\
+named COPYING and dvips.h.\n\
+Primary author of Dvips: T. Rokicki.");
+         exit (0);
+      }
    }
 #endif /* KPATHSEA */
 #endif /* VMS */
@@ -730,27 +747,6 @@ main(int argc, char **argv)
          if (*argv[i]=='-') {
             char *p=argv[i]+2;
             char c=argv[i][1];
-#ifdef KPATHSEA
-            /* print information and exit if dvips finds options
-               --help or --version */
-            if (strlen (argv[i] + 1) == 5 && strcmp (argv[i] + 1, "-help") == 0) {
-               help (0);
-               exit (0);
-            }
-            if (strlen (argv[i] + 1) == 8 &&
-                strcmp (argv[i] + 1, "-version") == 0) {
-               puts (BANNER);
-               puts (kpathsea_version_string);
-               puts ("Copyright 2022 Radical Eye Software.\n\
-There is NO warranty.  You may redistribute this software\n\
-under the terms of the GNU General Public License\n\
-and the Dvips copyright.\n\
-For more information about these matters, see the files\n\
-named COPYING and dvips.h.\n\
-Primary author of Dvips: T. Rokicki.");
-               exit (0);
-            }
-#endif /* KPATHSEA */
             switch (c) {
 case '-':
                queryoptions = 1;
