@@ -1,3 +1,9 @@
+2022-09-02  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
+
+	* dvips.c:
+	Check options --help and --version before getdefaults(CONFIGFILE).
+	This change prevents unwanted looking for texmf.cnf.
+
 2022-04-06  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>
 
 	* tfmload.c:
